# run-once

./: Cargo.toml
.github/workflows/: ci.yml
src/: lib.rs  run_once.rs  run_once_thread.rs
