[package]
name = "run-once"
version = "0.1.0"
edition = "2021"
description = "Macros to reduce boilerplate with the Rust std::sync::Once feature"
license = "MIT"
repository = "https://github.com/sheijningen/run-once"
readme = "README.md"
keywords = ["macro", "run-once", "once", "run-once-thread"]

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }